<resources>
    <string name="app_name">SICOP 2</string>


    <!-- Login Activity -->
    <string name="login_toast_no_found_farms">Sincronizar y seleccionar una finca válida</string>
    <string name="login_tittle_SICOP_APP">SICOP APP</string>

    <!-- Main Activity -->
    <string name="main_toast_no_found_blocks">Seleccionar un bloque</string>
    <string name="main_toast_no_found_bed">Seleccionar una cama</string>

    <!-- Main Activity - 360 App -->
    <string name="main_toolbar_title">SDK DEMO</string>
    <string name="main_toast_camera_connected">Camara conectada</string>
    <string name="main_toast_camera_disconnected">Camera disconnected</string>
    <string name="main_toast_camera_connect_error">Camera connect failed %d</string>
    <string name="main_connect_wifi_button">Conectar</string>
    <string name="main_disconnect_button">Desconectar</string>
    <string name="main_item_desc_connect">Conectar/Desconectar Camara WIFI</string>
    <string name="main_item_desc_camera_fun">Funciones de la camara</string>

    <string name="main_capture_button">Capturar video</string>

    <string name="stitch_toolbar_title">HDR Stitching</string>
    <string name="stitch_original">Original Effect</string>
    <string name="stitch_hdr">HDR Stitching Effect</string>


    <string name="permission_dialog_title">Permisos necesarios</string>
    <string name="permission_dialog_message">Esta aplicación necesita permisos de almacenamiento y ubicación para funcionar correctamente. Por favor, habilite estos permisos en la configuración de la aplicación.</string>

    <string name="cancel">Cancelar</string>
    <string name="settings">Configuración</string>


    <string name="main_toast_sd_enabled">La tarjeta SD habilitada</string>
    <string name="main_toast_sd_disabled">La tarjeta SD tiene un error</string>


    <string name="live_toast_bind_mobile_network_successful">Bind mobile network successful</string>
    <string name="live_toast_bind_mobile_network_failed">Bind mobile network failed</string>
    <string name="live_toast_unbind_mobile_network">Unbind mobile network</string>
    <string name="live_toast_unbind_mobile_network_when_lost">Lost mobile network, temporarily unbind</string>

    <!-- Capture Activity - 360 App -->

    <!-- Capture Activity - 360 App - Layout -->
    <string name="capture_normal_record_start">Iniciar grabación </string>
    <string name="capture_normal_record_stop">Detener grabación </string>
    <string name="capture_capture_working">Capturando...</string>
    <string name="capture_capture_time">Tiempo de captura: %s</string>
    <string name="capture_capture_count">Número de capturas: %d</string>
    <string name="capture_play_local_file">Descargar video</string>


    <string name="capture_toolbar_title">Capture &amp; Listener</string>
    <string name="capture_toast_sd_card_error">No SD card inserted or Not enough free space</string>
    <string name="capture_capture_starting">Capture Starting...</string>
    <string name="capture_capture_stopping">Capture Stopping...</string>
    <string name="capture_capture_finished">Capture Finished</string>

    <string name="capture_switch_sensor_ing">Switching Sensor</string>
    <string name="capture_switch_sensor_success">Switch successfully</string>
    <string name="capture_switch_sensor_failed">Switch failed</string>
    <string name="capture_switch_sensor_camera_connect_error">Camera is not connected</string>

    <string name="osc_dialog_title_downloading">Descargando...</string>
    <string name="osc_dialog_msg_downloading">"Total %1$d, Correctos %2$d, Fallidos %3$d</string>


    <!-- Play And Export Activity -->
    <string name="play_toolbar_title">Play &amp; Export</string>
    <string name="play_toast_empty_path">Empty path</string>
    <string name="play_export_original">Export\nPanorama</string>
    <string name="play_toast_load_finish">Load finish</string>
    <string name="play_toast_fail_desc">Error code: %1$d, Message: %2$s</string>

    <string name="export_dialog_stop">Stop</string>
    <string name="export_dialog_ok">OK</string>
    <string name="export_dialog_msg_exporting">Exporting...</string>
    <string name="export_dialog_msg_export_success">Export successful.\nSave directory: %s</string>
    <string name="export_dialog_msg_export_failed">Export failed(%d)</string>
    <string name="export_dialog_msg_export_stopped">Export Stopped</string>
    <string name="export_dialog_msg_export_progress">Export progress： %s</string>


    <string name="preview_toolbar_title">Preview -- Normal Mode</string>
    <string name="preview_angle">Preview Type:</string>
    <string name="preview_mode_normal">Normal</string>
    <string name="preview_mode_fisheye">Fisheye</string>
    <string name="preview_mode_perspective">Perspective</string>
    <string name="preview_mode_plane">Plane</string>

    <string name="stab_type">Stabilizing Type:</string>
    <string name="choose_resolution">Resolution Selection:</string>
    <string name="full_demo_start">Start</string>
    <string name="full_demo_stop">Stop</string>


    <string name="stab_type_auto">Auto Select</string>
    <string name="stab_type_panorama">For Panorama</string>
    <string name="stab_type_calibrate_horizon">Align the horizon only</string>
    <string name="stab_type_footage_motion_smooth">Smooth footage motion, no horizon alignment</string>
    <string name="stab_type_off">OFF</string>


</resources>