<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layout_switch_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btn_switch_front_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/capture_switch_front_sensor"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_switch_sensor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn_normal_record_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/capture_normal_record_start"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_normal_record_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/capture_normal_record_stop"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_capture_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_ro_display_regular"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/layout_buttons_record"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            tools:text="@string/capture_capture_working" />

        <TextView
            android:id="@+id/tv_capture_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ro_display_regular"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_capture_status"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            tools:text="@string/capture_capture_time"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_capture_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ro_display_regular"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_capture_time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            tools:text="@string/capture_capture_count"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_play_camera_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/capture_play_camera_file"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_capture_count"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_play_local_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/capture_play_local_file"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btn_play_camera_file"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>